--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,3 +2,39 @@
   border: 1px solid black;
   padding: 0;
 }
+
+.container{
+  position: relative;
+}
+
+.life-points-wrapper{
+  width: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  flex-direction: column;
+  left: 125px;
+}
+
+.bar{
+  height: 100%;
+  width: 100%;
+  background-color: red;
+}
+
+.scoreboard{
+  z-index: 15;
+  width: 50px;
+  height: 5rem;
+  font-size: 5em;
+  color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.life-bar{
+  width: 100%;
+  height: 1em;
+}
