--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,10 +15,11 @@
   position: absolute;
   flex-direction: column;
   left: 125px;
+  opacity: .8;
 }
 
 .bar{
-  height: 100%;
+  height: 40%;
   width: 100%;
   background-color: red;
 }
@@ -74,9 +75,44 @@
   height: 10%;
   position: absolute;
   top: 10px;
-  right: 10px;
+  right: 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-size: 2em;
+  opacity: .5;
+}
+
+.buff-keys{
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  display: flex;
+  justify-content: space-between;
+  width: 20%;
+}
+
+.key-wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.blue-buff-amount{
+  font-size: 2em;
+  color: blue;
+}
+
+.black-buff-amount{
+  font-size: 2em;
+  color: black;
+}
+
+.orange-buff-amount{
+  font-size: 2em;
+  color: orange;
+}
+
+.key-img{
+  opacity: 0.4;
 }
